# borunte

./: .gitignore  README.md  RESTRUCTURE_CHANGES.md  ROADMAP.md  all.py  config.py  degree.py  main.py  merge.py  new5.py  offline.py  pyproject.toml  test_grid_capture.py
borunte/: __init__.py  cam_rs.py  cap_session.py  capture.py  client.py  config.py  control.py  grid.py  motion.py  move_down_10mm.py  protocols.py  run_capture.py  runner.py  state.py  waypoints.py  wire.py
borunte/calib/: __init__.py  charuco.py  pipeline.py
borunte/cam/: __init__.py  realsense.py  session.py
borunte/cli/: __init__.py  capture_runner.py
borunte/control/: __init__.py  client.py  controller.py  motion.py  protocols.py  state.py
borunte/core/: __init__.py
borunte/core/geometry/: __init__.py  angles.py
borunte/grid/: __init__.py  generator.py  waypoints.py
borunte/utils/: __init__.py  error_tracker.py  format.py  geometry.py  io.py  logger.py  progress.py  rs.py  view.py
borunte/vision/: __init__.py  merge.py
borunte/vision/analysis/: __init__.py  merge_runner.py  visualize_runner.py
borunte/vision/io/: series.py
borunte/vision/processing/: depth.py  merge.py
borunte/vision/viz/: viewer.py
calib/: __init__.py  charuco.py  config.py  depth.py  detect.py  handeye.py  io_utils.py  offline.py  pipeline.py  pnp.py  run_depth.py  run_detect.py  run_handeye.py  run_pnp.py
examples/: smoke_refactor_check.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_integration.py
utils/: __init__.py  config.py  error_tracker.py  format.py  geometry.py  io.py  logger.py  progress.py  rs.py  view.py
vision/: __init__.py  config.py
vision/analysis/: graph_runner.py  merge_runner.py  skeleton_runner.py  visualize_runner.py
vision/cloud/: generator.py  io.py  merge.py  preprocessing.py  registration.py
vision/graph/: build.py  mapping.py  traversal.py
vision/io/: __init__.py  series.py
vision/merge/: config.py  export.py  intrinsics.py  main.py  pipeline.py  poses.py  preview.py  tsdf.py  viz.py
vision/processing/: __init__.py  depth.py  merge.py
vision/skeleton/: geodesic.py  project2d.py  thinning.py
vision/trusskit/: __init__.py  config.py  graph_build.py  graph_traverse.py  io.py  mesh.py  nodes_edges.py  normals.py  overlays.py  pipeline.py  plane.py  project2d.py  regions.py  skeleton2d.py  transforms.py  viewer.py
vision/utils/: __init__.py  settings.py
vision/viz/: __init__.py  draw.py  viewer.py
